--- a/Presentations/Reinforcement Learning.ipynb
+++ b/Presentations/Reinforcement Learning.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# What is reinforcement learning?\n",
+    "How software should act in an environment to maximize reward.\n",
     "\n",
     "Create policies that tell us when to enter and exit.\n",
     "\n",
@@ -30,28 +32,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "put image here"
+    "![robot](robot.PNG)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example taken further: Mapping Trading to RL\n",
-    "\n",
-    "Environment = Market\n",
-    "State = Market Features, Prices, Holding or not, etc.\n",
-    "Actions = BUY, SELL, NOTHING\n",
-    "\n",
-    "\n",
-    "We can reverse engineer the policy with the rewards and actions"
+    "![threeapproaches](threeapproaches.PNG)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Markov Decision Problem\n",
+    "Note: value-function based is Q-Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Markov Decision Process\n",
+    "\n",
+    "How we model a RL problem.\n",
     "\n",
     "- Set of States S\n",
     "- Set of actions A\n",
@@ -63,7 +67,44 @@
     "\n",
     "Find policy P*(s) optimal, that will maximize reward.\n",
     "\n",
-    "2 types of thigns are policy iteraion and value iteraion, we need T and R though which we do not have."
+    "2 types of solution methods are policy iteration and value iteration, we need T and R though which we do not have.\n",
+    "\n",
+    "### Markov Decision Process (Machine Learning Udacity)\n",
+    "(Explain state with grid and state may or may not work correctly.)\n",
+    "\n",
+    "Transition Fucntion -> \"Rules of the game\"\n",
+    "\n",
+    "Markovian property \n",
+    "- only present matters.  Transition only depends on one state, s\n",
+    "- Things are stationary\n",
+    "\n",
+    "Reward: Just a scalar value\n",
+    "\n",
+    "MDP define problems, solution is the policy: P(s) -> a, There is a P* that maximizes long term reward.\n",
+    "\n",
+    "We have a lot of (s,a,r) pairs.  P is the f, r is z, y is a, s is x.\n",
+    "\n",
+    "Instead of seeing (s,a) pairs we see (s,a,r) tuples (s, a) -> r\n",
+    "\n",
+    "s = x, a = y, r = z, P = f.\n",
+    "\n",
+    "A policy is just a function that tells you which action to take for a given state.\n",
+    "\n",
+    "We only care about the best action for just the state we are in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![mdp](mdp.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![stochasticoptimal](stochasticoptimal.PNG)"
    ]
   },
   {
@@ -72,7 +113,7 @@
    "source": [
     "### Unknown transitions and rewards\n",
     "\n",
-    "(s1, a1, s2, r1) Experience tuple, similar to RL.\n",
+    "(s1, a1, s2, r1) Experience tuple, similar to SL.\n",
     "(s2,a2,s3,r2)\n",
     "\n",
     "Take a new action and get a new state and reward, etc, etc, etc.\n",
@@ -91,9 +132,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show optimize picture\n",
-    "\n",
-    "Talk about infinite and finite horizon and reduction in rewards.  $\\lambda = .95$"
+    "![rlapi](rlapi.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rewards"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![optimize](optimize.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![quiz](quiz.PNG)"
    ]
   },
   {
@@ -121,7 +181,7 @@
    "metadata": {},
    "source": [
     "### Markov Decision Processes\n",
-    "Explain state with grid and state may or may not work correctly.\n",
+    "(Explain state with grid and state may or may not work correctly.)\n",
     "\n",
     "Transition Fucntion -> \"Rules of the game\"\n",
     "\n",
@@ -133,14 +193,98 @@
     "\n",
     "MDP define problems, solution is the policy: P(s) -> a, There is a P* that maximizes long term reward.\n",
     "\n",
-    "We have a lot of (s,a,r) pairs.  P is the f, r is z, y is a, s is x."
+    "We have a lot of (s,a,r) pairs.  P is the f, r is z, y is a, s is x.\n",
+    "\n",
+    "Instead of seeing (s,a) pairs we see (s,a,r) tuples (s, a) -> r\n",
+    "\n",
+    "s = x, a = y, r = z, P = f.\n",
+    "\n",
+    "A policy is just a function that tells you which action to take for a given state.\n",
+    "\n",
+    "We only care about the best action for just the state we are in."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q-Learning\n"
+    "### MDP: Rewards\n",
+    "\n",
+    "- delayed rewards: Chess game(playing well with 1 blunder, playing badly for all turns), Board with only +1 in one square.\n",
+    "\n",
+    "    - You will have an array of (s,a,r) tuples and chains leading to rewards, we need to figure out where we went wrong. Temporal Credit Assignment\n",
+    "\n",
+    "- minor changes matter: R(s) = -0.04.  The reward for every state not explicity marked.  What do these small negative rewards encourage you to do?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "QUIZ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reward function drastically changes what approach we take."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q-Learning\n",
+    "Is a model free approach, it does not use models of T or R.  We build a table of utility values as we interact with the world.\n",
+    "\n",
+    "Named after Q function:\n",
+    "- Q(s,a): Table.  S = State, A = Action.  Q represents the value you get for taking action A from State S.\n",
+    "- immediate reward and discounted reward.\n",
+    "\n",
+    "How to use Q?\n",
+    "- P(s) = argmax_a(Q(s,a)) What value of a maximizes Q at state s.\n",
+    "- P*(s) = optimal policy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "qimprove"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update Rule\n",
+    "Updating Q:\n",
+    "- $\\alpha$ learning rate between 0 to 1.0 usually .2\n",
+    "- $\\lambda$ discount rate from 0 to 1.0\n",
+    "$$Q'(s,A) = (1 - \\alpha)\\cdot Q(s,a) + \\alpha \\cdot improved estimate$$\n",
+    "\n",
+    "$$Q'(s,A) = (1 - \\alpha)\\cdot Q(s,A) + \\alpha \\cdot (r + \\lambda \\cdot Q(s', argmax_{A'}(Q(s', A'))))$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Q(s', argmax_{A'}(Q(s', A')))$ = Future discounted rewards."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Two Finer Points\n",
+    "- Success depends on exploration: One way to do this is with randomness.\n",
+    "- Choose random action with prob c.\n",
+    "\n",
+    "Set c to .3 at the beginning of learning and make it smaller and smaller until we have multiple iterations.  It lets us arrive at different states we may not otherwise arrive at.\n",
+    "\n",
+    "Flip a coin: Are we gonna pick a random action? What random action will we take?"
    ]
   }
  ],
