updating reinforcement learning presentation

--- a/Presentations/Reinforcement Learning.ipynb
+++ b/Presentations/Reinforcement Learning.ipynb
@@ -7,7 +7,7 @@
     "# What is reinforcement learning?\n",
     "How software should act in an environment to maximize reward.\n",
     "\n",
-    "Create policies that tell us when to enter and exit.\n",
+    "For example, in trading, we want it to create a policy that tell us when to buy and sell.\n",
     "\n",
     "RL is a problem not a solution.  Similar to lin reg is a solution to the supervised regression problem.\n",
     "\n",
@@ -21,9 +21,9 @@
     "\n",
     "Robot has a policy based on s that provides an action -> P(S) = A\n",
     "\n",
-    "The environment then takes the action and transitions to a new state.\n",
+    "The environment then takes the action and transitions to a new state and a reward.\n",
     "\n",
-    "The question is, how do we find P?\n",
+    "The question is how do we find P?\n",
     "\n",
     "Imagine that the robot accumulates these rewards and tries to tkae actions that maximize these rewards.  There is an algo that takes all this information over time and to find the best P."
    ]
@@ -33,20 +33,6 @@
    "metadata": {},
    "source": [
     "![robot](robot.PNG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![threeapproaches](threeapproaches.PNG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: value-function based is Q-Learning"
    ]
   },
   {
@@ -132,13 +118,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![rlapi](rlapi.PNG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Rewards"
    ]
   },
@@ -164,6 +143,106 @@
     "- The problem for RL algos are a MDPs. RL algos solve that.\n",
     "- S, A, T, R Find P\n",
     "- Map to trading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stop here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bellman Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![utility](utility.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utility (following a policy) is the expected states you see following a specific policy. \n",
+    "\n",
+    "Utility can be seen as current reward and all future rewards if you follow a given policy.\n",
+    "\n",
+    "Argmax is finding the optimal arg.\n",
+    "\n",
+    "Gamma is the discount\n",
+    "\n",
+    "R is the reward function.\n",
+    "\n",
+    "P is the policy\n",
+    "\n",
+    "\\* is the optimal\n",
+    "\n",
+    "E is expectation\n",
+    "\n",
+    "Last line is Bellman equation. Very Important!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![policyquiz](policyquiz.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![policyquiz2](policyquiz2.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stop Here for lesson 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![rlapi](rlapi.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![threeapproaches](threeapproaches.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. State to Action -> Policy Search.\n",
+    "    - Learning Policy is very indirect but direct use.\n",
+    "\n",
+    "2. Utility maps states to values -> Value-function based.  If we're acting in the world, we can be in a state and take an action to get a value.\n",
+    "\n",
+    "3. Transition Function, Reward function. -> model-based.  Direct learning but indirect use.  Can be solved as a Supervised Learning problem.\n",
+    "\n",
+    "Note: value-function based is Q-Learning"
    ]
   },
   {
