Adding RL presentations.

--- a/Presentations/Reinforcement Learning.ipynb
+++ b/Presentations/Reinforcement Learning.ipynb
@@ -170,6 +170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![nonargu](nonargu.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Utility (following a policy) is the expected states you see following a specific policy. \n",
     "\n",
     "Utility can be seen as current reward and all future rewards if you follow a given policy.\n",
@@ -214,13 +221,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stop Here for lesson 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "![rlapi](rlapi.PNG)"
    ]
   },
@@ -229,6 +229,13 @@
    "metadata": {},
    "source": [
     "![threeapproaches](threeapproaches.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More on MDP"
    ]
   },
   {
@@ -308,62 +315,6 @@
    "metadata": {},
    "source": [
     "Reward function drastically changes what approach we take."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Q-Learning\n",
-    "Is a model free approach, it does not use models of T or R.  We build a table of utility values as we interact with the world.\n",
-    "\n",
-    "Named after Q function:\n",
-    "- Q(s,a): Table.  S = State, A = Action.  Q represents the value you get for taking action A from State S.\n",
-    "- immediate reward and discounted reward.\n",
-    "\n",
-    "How to use Q?\n",
-    "- P(s) = argmax_a(Q(s,a)) What value of a maximizes Q at state s.\n",
-    "- P*(s) = optimal policy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "qimprove"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Update Rule\n",
-    "Updating Q:\n",
-    "- $\\alpha$ learning rate between 0 to 1.0 usually .2\n",
-    "- $\\lambda$ discount rate from 0 to 1.0\n",
-    "$$Q'(s,A) = (1 - \\alpha)\\cdot Q(s,a) + \\alpha \\cdot improved estimate$$\n",
-    "\n",
-    "$$Q'(s,A) = (1 - \\alpha)\\cdot Q(s,A) + \\alpha \\cdot (r + \\lambda \\cdot Q(s', argmax_{A'}(Q(s', A'))))$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$Q(s', argmax_{A'}(Q(s', A')))$ = Future discounted rewards."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Two Finer Points\n",
-    "- Success depends on exploration: One way to do this is with randomness.\n",
-    "- Choose random action with prob c.\n",
-    "\n",
-    "Set c to .3 at the beginning of learning and make it smaller and smaller until we have multiple iterations.  It lets us arrive at different states we may not otherwise arrive at.\n",
-    "\n",
-    "Flip a coin: Are we gonna pick a random action? What random action will we take?"
    ]
   }
  ],
