--- a/Section 3/03-06 Q-Learning.ipynb
+++ b/Section 3/03-06 Q-Learning.ipynb
@@ -9,7 +9,8 @@
     "- Q does not think short term\n",
     "\n",
     "##### How to use Q?\n",
-    "P(s) = argmax_a(Q(s,a)) finds the a that maximizes Q(s)()\n",
+    "P(s) = argmax_a(Q(s,a)) finds the a that maximizes Q(s)\n",
+    "\n",
     "P*(s) = Q*(s,a)\n",
     "\n",
     "How do we build that Q table?"
@@ -175,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resources\n",
+    "### Resources\n",
     "\n",
     "- CS7641 Machine Learning, taught by Charles Isbell and Michael Littman\n",
     "    - Watch for free on [Udacity](https://classroom.udacity.com/courses/ud262) (mini-course 3, lessons RL 1 - 4)\n",
