--- a/Section 3/03-07 Dyna.ipynb
+++ b/Section 3/03-07 Dyna.ipynb
@@ -40,11 +40,14 @@
    "source": [
     "### Learning T - methods from teacher\n",
     "T(s, a, s') prob s,a -> s'\n",
-    "init Tc() = to be very small numbers\n",
-    "while executing, observe (s,a,s')\n",
-    "increment T_c(s,a,s')\n",
     "\n",
-    "T_c(s,a,s'): Probability of ending up in state s'"
+    "init $T_c$() = to be very small numbers = 0.000001\n",
+    "\n",
+    "while executing, observe (s,a,s')\n",
+    "\n",
+    "increment $T_c$(s,a,s')\n",
+    "\n",
+    "$T_c(s,a,s')$: Probability of ending up in state s'"
    ]
   },
   {
@@ -68,13 +71,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Summary\n",
+    "### Summary\n",
     "\n",
     "The Dyna architecture consists of a combination of:\n",
     "\n",
-    "    direct reinforcement learning from real experience tuples gathered by acting in an environment,\n",
-    "    updating an internal model of the environment, and,\n",
-    "    using the model to simulate experiences.\n",
+    "- direct reinforcement learning from real experience tuples gathered by acting in an environment,\n",
+    "- updating an internal model of the environment, and,\n",
+    "- using the model to simulate experiences.\n",
     "\n",
     "Dyna learning architecture\n",
     "\n",
@@ -89,12 +92,18 @@
    "source": [
     "Resources\n",
     "\n",
-    "    Richard S. Sutton. Integrated architectures for learning, planning, and reacting based on approximating dynamic programming. In Proceedings of the Seventh International Conference on Machine Learning, Austin, TX, 1990. [pdf](https://webdocs.cs.ualberta.ca/~sutton/papers/sutton-90.pdf)\n",
-    "    Sutton and Barto. Reinforcement Learning: An Introduction. MIT Press, Cambridge, MA, 1998. [web](https://webdocs.cs.ualberta.ca/~sutton/book/the-book.html)\n",
-    "    [RL course by David Silver](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html) (videos, slides)\n",
-    "        Lecture 8: Integrating Learning and Planning [pdf]http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching_files/dyna.pdf\n",
+    "- Richard S. Sutton. Integrated architectures for learning, planning, and reacting based on approximating dynamic programming. In Proceedings of the Seventh International Conference on Machine Learning, Austin, TX, 1990. [pdf](https://webdocs.cs.ualberta.ca/~sutton/papers/sutton-90.pdf)\n",
+    "- Sutton and Barto. Reinforcement Learning: An Introduction. MIT Press, Cambridge, MA, 1998.[web](https://webdocs.cs.ualberta.ca/~sutton/book/the-book.html)\n",
+    "    \n",
+    "- [RL course by David Silver](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html) (videos, slides)\n",
+    "    - Lecture 8: Integrating Learning and Planning [pdf]http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching_files/dyna.pdf      \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
